created header bar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,16 @@
 
 @use '@nebular/theme/styles/globals' as *;
 
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 @include nb-install() {
   @include nb-theme-global();
 };
 /* You can add global styles to this file, and also import other style files */
+
+
+
+body {
+  background: #F8F9FA;
+  font-family: 'Varela Round', sans-serif;
+}
