--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,6 @@
-<nb-layout>
-
-  <nb-layout-header fixed>
-  <!-- Insert header here -->
-  </nb-layout-header>
-
+<nb-layout class="layout">
   <nb-layout-column>
-    <div>
-      hello
-    </div>
+    <app-home></app-home>
+
   </nb-layout-column>
-
-  <nb-layout-footer fixed>
-  <!-- Insert footer here -->
-  </nb-layout-footer>
-
 </nb-layout>
