refactored home to header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nb-layout class="layout">
   <nb-layout-column>
-    <app-home></app-home>
+    <app-header></app-header>
 
   </nb-layout-column>
 </nb-layout>
