--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="header">
     <span class="title">Weather App</span>
-    
+
     <div>
         <span class="subtitle">JSON File</span>
-        <input type="text" class="search-box" nbInput>
+        <input type="text" class="search-box" placeholder="Enter JSON link..." nbInput>
     </div>
     
 </div>
