re-render on JSON change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nb-layout class="layout">
   <nb-layout-column>
     <app-header></app-header>
-
+    <router-outlet></router-outlet>
   </nb-layout-column>
 </nb-layout>
