--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,9 @@
 <div class="header">
     <span class="title">Weather App</span>
 
-    <form (ngSubmit)="submit(linkBox.value)">
+    <form (ngSubmit)="onSubmit(linkBox.value)">
         <span class="subtitle">JSON File</span>
         <input #linkBox type="text" class="search-box" placeholder="Enter JSON link..." value="https://www.weatherinnovations.com/coop/weather.json" nbInput>
     </form>
+
 </div>
